# ec-api-proxy

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  cloudfront-lambda-functions.yaml  codecov.yml  manage.py  public-access-template.yaml  pyproject.toml  template.yaml
.circleci/: config.yml  get_cf_export_value.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  workflow.yml
api_endpoints/api_auth/: handler.py  pyproject.toml
api_endpoints/lambda_edge/: pyproject.toml
api_endpoints/lambda_edge/auth_header_to_query/: handler.py
api_endpoints/v1_postcode_lookup/: Makefile  app.py  middleware.py  pyproject.toml  requirements.txt  upstream_api_client.py  utils.py
ec_api/: lambda_awsgi.py  settings.py  urls.py  wsgi.py
ec_api/apps/api_docs/: apps.py  urls.py  views.py
ec_api/apps/api_docs/blueprints/: data_structures.apibp  endpoints.apibp  notes.apibp
ec_api/apps/api_docs/templates/api_docs/: api_docs_base.html  concepts.html  home.html
ec_api/apps/api_docs/templatetags/: blueprint.py
ec_api/apps/api_proxy/: apps.py  auth.py  upstream_api_client.py  urls.py  views.py
ec_api/apps/api_proxy/tests/: conftest.py  name_factory.py  response_builder.py  test_auth.py  test_response_builder.py  test_views.py
ec_api/apps/frontend/: urls.py  utils.py  views.py
ec_api/apps/frontend/templates/frontend/: home.html  terms.html  widget_view.html
ec_api/apps/frontend/tests/: test_views.py
ec_api/apps/users/: admin.py  forms.py  logging_helpers.py  models.py  urls.py  views.py
ec_api/apps/users/management/commands/: write_api_key_csvs_to_monitoring_s3.py
ec_api/apps/users/migrations/: 0001_initial.py  0002_apikey.py  0003_auto_20210305_1213.py  0004_customuser_name.py
ec_api/apps/users/templates/users/: authenticate.html  authenticate_error.html  delete_key.html  login.html  logout.html  profile.html  register.html
ec_api/apps/users/templates/users/email/: login_message.txt
ec_api/apps/users/tests/: factories.py  test_forms.py  test_logging_helpers.py  test_managers.py  test_models.py  test_views.py
ec_api/assets/scss/: ec_colours.scss  styles.scss
ec_api/settings/: base.py  base_lambda.py  local.py.example  testing.py
ec_api/templates/: base.html  logo.html
ec_api/templates/components/forms/: field.html  non_field_error.html
lambda-layers/DependenciesLayer/: Makefile
samconfig.toml.d/: ci-production.toml  ci-staging.toml  development.toml
scripts/: startapp.sh
