[project]
name = "ec-api-proxy"
version = "0.0.0"
description = "White label consumer of DC APIs"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django==5.2.9",
    "sentry-sdk==2.28.0",
    "django-debug-toolbar==4.2.0",
    "whitenoise==6.6.0",
    "django-sesame==3.2.1",
    "psycopg2-binary==2.9.10",
    "django-ses==3.5.0",
    "requests==2.32.4",
    "django-apiblueprint-view==2.5.1",
    "django-cors-headers==4.3.1",
    "setuptools==78.1.1",
    "aws-wsgi",
    "dc-design-system",
    "dc-django-utils",
    "dc-logging-utils",
]

[dependency-groups]
dev = [
    "boto3==1.38.34",
    "faker==20.1.0",
    "djhtml==3.0.6",
    "pre-commit==3.5.0",
    "pytest==7.4.3",
    "pytest-django==4.7.0",
    "pytest-ruff==0.2.1",
    "pytest-env==1.1.3",
    "coveralls==3.3.1",
    "pytest-cov==4.1.0",
    "factory-boy==3.3.0",
    "pytest-mock==3.12.0",
    "ipdb==0.13.13",
    "pytest-socket==0.6.0",
    "ruff==0.1.6",
    "uvicorn==0.30.6",
    "moto==5.0.5",
]

[tool.uv.sources]
aws-wsgi = { git = "https://github.com/DemocracyClub/awsgi.git", rev = "a5b800373c326e75f705d400c48f7df301409724" }
dc-design-system = {git = "https://github.com/DemocracyClub/design-system.git", tag = "0.8.0" }
dc-django-utils = { git = "https://github.com/DemocracyClub/dc_django_utils.git", tag = "8.0.5" }
dc-logging-utils = { git = "https://github.com/DemocracyClub/dc_logging.git", tag = "3.0.0" }

[tool.uv]
required-version = "==0.9.*"
package = false

[tool.uv.workspace]
members = ["api_endpoints/*"]


[tool.pytest.ini_options]
norecursedirs = ".git __pycache__ .aws-sam"
addopts = "--ignore=*/__pycache__ --ignore=.* --disable-socket"
python_files = "test_*.py"
env = "RUN_ENV=test"
DJANGO_SETTINGS_MODULE = "ec_api.settings.testing"
FAIL_INVALID_TEMPLATE_VARS = "1"


[tool.ruff]
line-length = 80
ignore = ["E501"]
extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]
