[project]
name = "v1-postcode-lookup"
version = "0.0.0"
description = "API endpoint for proxying requests to devs.DC"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "sentry-sdk[starlette]==2.28.0",
    "starlette==0.26.1",
    "mangum==0.17.0",
    "requests==2.32.4",
    "dc-logging-utils",
]

[tool.uv.sources]
dc-logging-utils = { git = "https://github.com/DemocracyClub/dc_logging.git", tag = "1.0.2" }

[tool.uv]
package = false
